# revise_utility

./: README.md
revise/: Config.in  revise.mk
revise/scr/: CMakeLists.txt  analizer.h  help.cpp  keys.h  main.cpp  read_url.cpp  read_url.h  url_version.h
revise/src/: CMakeLists.txt  analizer.cpp  main.cpp  read_file.cpp  read_file.h  read_url.h  test_original.h  url_version.h
src/: analizer.h  help.cpp  help.h  keys.h  pur_test_online.cpp  pur_test_online.h  read_url.cpp  test_original.cpp  wrfile.cpp  wrfile.h
